# minimal-python-nix

./: flake.nix  pyproject.toml
